--- a/src/components/animal/Animal.css
+++ b/src/components/animal/Animal.css
@@ -3,7 +3,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px; /* 5px rounded corners */
-    background: rgba(228, 228, 226, 0.24);
+    background: #e4e4e23d;
     margin-bottom: 2em;
     flex: 0 1 24%;
   }
@@ -68,4 +68,17 @@
   .hvr-float:focus,
   .hvr-float:active {
     transform: translateY(-8px);
+  }
+
+  .btn {
+    background-color: #599B78;
+    border: none;
+    color: cornsilk;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    padding: .5em;
+    border-radius: 2px;
+    margin: .1em;
   }
