Can no longer edit or close locations when logged out

--- a/src/components/animal/AnimalDetail.css
+++ b/src/components/animal/AnimalDetail.css
@@ -1,3 +1,18 @@
 button {
-   cursor: pointer; 
+   cursor: pointer;
+   background-color: #599B78;
+   border: none;
+   color: cornsilk;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 14px;
+   padding: .5em;
+   border-radius: 2px;
+   margin: .1em;
+}
+
+img {
+   height: 153.59px;
+   width: 153.59px;
 }
